resources/prometheus-service/overlays/dev/prometheus-service-ingress-kustomize.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring  # Adjust if your Prometheus is in a different namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # This should match the IngressClass for NGINX
  rules:
  - host: prometheus.local.m-mobility.com # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
